alerta reducir ejemplares en notebook

--- a/materiales/templates/materiales/formularios_altas/alta_notebook.html
+++ b/materiales/templates/materiales/formularios_altas/alta_notebook.html
@@ -36,5 +36,10 @@
     </div>
 </form>
 
-<!-- Importación del JS dinámico de ejemplares -->
+<!-- Incluir los modales -->
+{% include 'modals/alertas/vaciar_campos.html' %}
+{% include 'modals/alertas/reducir_ejemplares.html' %}
+
+<!-- Importación de los JS necesarios -->
+<script src="{% static 'js/alertas.js' %}"></script>
 <script src="{% static 'js/form_altas.js' %}"></script>
