--- a/materiales/templates/materiales/formularios_altas/alta_proyector.html
+++ b/materiales/templates/materiales/formularios_altas/alta_proyector.html
@@ -36,12 +36,7 @@
     </div>
 </form>
 
-<!-- Incluir el modal de alerta -->
-{% include 'modals/alertas/vaciar_campos.html' %}
-
-<!-- Importación del JS para el modal de vaciar campos -->
+<!-- Importación de los JS necesarios -->
 <script src="{% static 'js/alertas.js' %}"></script>
-
-<!-- Importación del JS dinámico de ejemplares -->
 <script src="{% static 'js/form_altas.js' %}"></script>
 
