--- a/materiales/templates/home.html
+++ b/materiales/templates/home.html
@@ -33,7 +33,7 @@
         <div class="col-lg-6 col-md-5 d-flex justify-content-center align-items-center transparencia logo-trans-background">
             <!-- Contenedor de botones con superposición -->
             <div class="content-overlay d-flex flex-column justify-content-center align-items-start">
-                <a class="btn btn-home mb-3" href="{% url 'gestion' %}" role="button">GESTIONES</a>
+                <a class="btn btn-home mb-3" href="{% url 'gestion' %}" role="button">GESTION</a>
                 <a class="btn btn-home mb-3" href="{% url 'alta_materiales' %}" role="button">ALTA MATERIAL</a>
                 <a class="btn btn-home mb-3" href="{% url 'modificacion_materiales' %}" role="button">MODIFICACION <br>MATERIAL</a>
             </div>
