--- a/materiales/templates/materiales/notebook/lista_notebooks.html
+++ b/materiales/templates/materiales/notebook/lista_notebooks.html
@@ -276,7 +276,7 @@ header {
 
         <!-- Barra de búsqueda -->
         <div id="search-form">
-            <input type="text" id="search-input" placeholder="Buscar por marca o modelo...">
+            <input type="text" id="search-input" placeholder="Buscar por modelo...">
             <span class="search-icon" onclick="$('#search-input').trigger('input');">🔍</span>
         </div>
 
@@ -285,7 +285,6 @@ header {
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>Marca</th>
                     <th>Modelo</th>
                     <th>Cantidad</th>
                     <th>Acciones</th>
