--- a/materiales/static/css/footer.css
+++ b/materiales/static/css/footer.css
@@ -20,9 +20,16 @@ html, body {
 .main-footer {
     background-color: #f8f9fa;
     text-align: center;
-    position: absolute;
-    bottom: 3px;
-    width: 100%; /* Asegura que el footer ocupe todo el ancho */
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    margin: 0;
+    padding: 5px 0;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .footer-links {
