--- a/materiales/static/css/navbar.css
+++ b/materiales/static/css/navbar.css
@@ -1,5 +1,7 @@
 .fondo {
     background-color: #3A4481;
+    margin: 0;
+    padding: 0 15px; /* Solo padding horizontal para el contenido */
 }
 
 .icon {
@@ -33,6 +35,9 @@
     color: white; /* Color del texto del navbar */
     height: 60px; /* Altura fija del navbar */
     min-height: 60px; /* Altura mínima para asegurar consistencia */
+    margin: 0; /* Eliminar márgenes */
+    padding: 0; /* Eliminar padding */
+    border: none; /* Eliminar bordes */
 }
 .dropdown-menu {
     background-color: #3A4481; /* Mismo color que el navbar */
