--- a/materiales/templates/components/baseb.html
+++ b/materiales/templates/components/baseb.html
@@ -23,7 +23,7 @@
     {% block extra_styles %}{% endblock %}
 </head>
 <body>
-    <div class="container-fluid layout-container">
+    <div class="layout-container">
         {% block navbar %}
             {% include 'components/navbar.html' %}
         {% endblock %}
