alertas vaciar campos en los distintos materiales

--- a/materiales/templates/materiales/formularios_altas/alta_materiales.html
+++ b/materiales/templates/materiales/formularios_altas/alta_materiales.html
@@ -1128,5 +1128,6 @@ window.prepararEnvioFormulario = function() {
 
 <!-- Scripts necesarios para funcionalidad de formularios dinámicos -->
 <script src="{% static 'js/form_altas.js' %}"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <!-- <script src="{% static 'js/confirmacion_alta_material.js' %}"></script> -->
 {% endblock %}
