--- a/materiales/templates/materiales/formularios_altas/formulario_programa.html
+++ b/materiales/templates/materiales/formularios_altas/formulario_programa.html
@@ -144,7 +144,8 @@
         <!-- Botones -->
         <div class="row">
             <div class="col-12 d-flex justify-content-end gap-3">
-                <button type="reset" class="btn btn-outline-danger btn-sm">Cancelar</button>
+                <!-- <button type="reset" class="btn btn-outline-danger btn-sm">Cancelar</button> -->
+                 <button type="button" class="btn btn-secondary" onclick="mostrarModalAlerta()">Cancelar</button>
                 <button type="submit" class="btn btn-primary btn-sm">Guardar</button>
             </div>
         </div>
